<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_item_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_text"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rbImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_image"/>
    </RadioGroup>

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content_hint"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:layout_marginTop="20dp"/>
</LinearLayout>